--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-  "name": "codigo-asesor",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "jest",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "prepare": "husky install"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@briebug/jest-schematic": "^3.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "@angular-builders/jest": "latest",
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular-eslint/builder": "4.3.0",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/schematics": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "jest": "^27.3.1",
-    "jest-html-reporters": "^2.1.6",
-    "jest-junit": "^13.0.0",
-    "jest-preset-angular": "^10.1.0",
-    "jest-sonar": "^0.2.12",
-    "karma-coverage": "~2.0.3",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
-    "pretty-quick": "^3.1.1",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.1.5"
-  }
+	"name": "codigo-asesor",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"test": "jest",
+		"lint": "ng lint",
+		"e2e": "ng e2e",
+		"prepare": "husky install",
+		"pretty-quick": "pretty-quick"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~11.2.14",
+		"@angular/common": "~11.2.14",
+		"@angular/compiler": "~11.2.14",
+		"@angular/core": "~11.2.14",
+		"@angular/forms": "~11.2.14",
+		"@angular/platform-browser": "~11.2.14",
+		"@angular/platform-browser-dynamic": "~11.2.14",
+		"@angular/router": "~11.2.14",
+		"@briebug/jest-schematic": "^3.1.0",
+		"rxjs": "~6.6.0",
+		"tslib": "^2.0.0",
+		"zone.js": "~0.11.3"
+	},
+	"devDependencies": {
+		"@angular-builders/jest": "latest",
+		"@angular-devkit/build-angular": "~0.1102.13",
+		"@angular-eslint/builder": "4.3.0",
+		"@angular-eslint/eslint-plugin": "4.3.0",
+		"@angular-eslint/eslint-plugin-template": "4.3.0",
+		"@angular-eslint/schematics": "4.3.0",
+		"@angular-eslint/template-parser": "4.3.0",
+		"@angular/cli": "~11.2.14",
+		"@angular/compiler-cli": "~11.2.14",
+		"@commitlint/cli": "^14.1.0",
+		"@commitlint/config-conventional": "^14.1.0",
+		"@types/jasmine": "~3.6.0",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^12.11.1",
+		"@typescript-eslint/eslint-plugin": "4.16.1",
+		"@typescript-eslint/parser": "4.16.1",
+		"eslint": "^7.6.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "latest",
+		"eslint-plugin-jsdoc": "latest",
+		"eslint-plugin-prefer-arrow": "latest",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.0",
+		"jasmine-core": "~3.6.0",
+		"jasmine-spec-reporter": "~5.0.0",
+		"jest": "^27.3.1",
+		"jest-html-reporters": "^2.1.6",
+		"jest-junit": "^13.0.0",
+		"jest-preset-angular": "^10.1.0",
+		"jest-sonar": "^0.2.12",
+		"karma-coverage": "~2.0.3",
+		"lint-staged": "^11.2.6",
+		"prettier": "^2.4.1",
+		"pretty-quick": "^3.1.1",
+		"protractor": "~7.0.0",
+		"ts-node": "~8.3.0",
+		"typescript": "~4.1.5"
+	}
 }
