--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@angular/platform-browser-dynamic": "~11.2.14",
 		"@angular/router": "~11.2.14",
 		"@briebug/jest-schematic": "^3.1.0",
+		"bancolombia-design-system": "^3.1.6",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.0.0",
 		"zone.js": "~0.11.3"
